--- a/src/precss/blocks/_btn.scss
+++ b/src/precss/blocks/_btn.scss
@@ -17,5 +17,9 @@
 
   &--blue {
     background-color: #14a1d5;
+    background-image: linear-gradient(to bottom, #1a93c0, #18a9df 13%, #139dd0);
+  }
+  &--orange {
+    background-image: linear-gradient(to top, #ff9300 66%, #ffb517);
   }
 }
