--- a/src/precss/styles.scss
+++ b/src/precss/styles.scss
@@ -6,3 +6,8 @@
 @import "blocks/btn";
 @import "blocks/action";
 @import "blocks/timer";
+@import "blocks/tabs";
+@import "blocks/services";
+@import "blocks/service";
+@import "blocks/pf-slide";
+@import "blocks/page-footer";
