--- a/src/precss/lib/_helpers.scss
+++ b/src/precss/lib/_helpers.scss
@@ -1,19 +1,16 @@
 body {
-  font-family: Arial, Helvetica, sans-serif
+  font-family: "Open Sans", sans-serif;
 }
+
+@include reset();
 
 .visually-hidden {
-	position: absolute !important;
-
-	overflow: hidden;
-	clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
-	clip: rect(1px, 1px, 1px, 1px);
-
-	width: 1px !important;
-	height: 1px !important;
-	padding:0 !important;
-
-	border:0 !important;
+  position: absolute !important;
+  overflow: hidden;
+  clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
+  clip: rect(1px, 1px, 1px, 1px);
+  width: 1px !important;
+  height: 1px !important;
+  padding: 0 !important;
+  border: 0 !important;
 }
-
-
