--- a/src/precss/styles.scss
+++ b/src/precss/styles.scss
@@ -1,3 +1,5 @@
+
+@import "http://fonts.fontstorage.com/import/opensans.css";
 @import "lib/project", "lib/mixins", "lib/smart-grid";
 @import "lib/helpers";
 @import "blocks/container";
@@ -11,3 +13,4 @@
 @import "blocks/service";
 @import "blocks/pf-slide";
 @import "blocks/page-footer";
+@import "blocks/main-menu";
