--- a/src/precss/lib/_helpers.scss
+++ b/src/precss/lib/_helpers.scss
@@ -1,5 +1,12 @@
 body {
   font-family: "Open Sans", sans-serif;
+  box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
 }
 
 @include reset();
