--- a/src/precss/styles.scss
+++ b/src/precss/styles.scss
@@ -15,3 +15,6 @@
 @import "blocks/page-footer";
 @import "blocks/main-menu";
 @import "blocks/search";
+@import "blocks/arrow";
+@import "blocks/feed-back";
+@import "blocks/section-header";
