--- a/src/precss/blocks/_services.scss
+++ b/src/precss/blocks/_services.scss
@@ -1,6 +1,15 @@
 .services {
+  padding-top: 50px;
   &__wrap {
     display: flex;
     justify-content: center;
+  }
+
+  &__promo {
+    font-size: 22px;
+    line-height: 38px;
+    color: #35353d;
+    text-align: center;
+    margin-bottom: 40px;
   }
 }
