--- a/src/precss/blocks/_action.scss
+++ b/src/precss/blocks/_action.scss
@@ -1,5 +1,6 @@
 
 .action {
+  position: relative;
   background-image: url("../img/bg-action.png");
   background-position: -20px center;
   background-repeat: no-repeat;
