--- a/src/precss/blocks/_gifts.scss
+++ b/src/precss/blocks/_gifts.scss
@@ -9,5 +9,6 @@
   url("../img/gifts-rigth.png");
   background-position: left, right;
   background-repeat: no-repeat;
+  background-size: contain;
   pointer-events: none;
 }
