--- a/src/precss/blocks/_slogan.scss
+++ b/src/precss/blocks/_slogan.scss
@@ -2,6 +2,7 @@
   height: 590px;
   background-image: url("../img/bg-promo.jpg");
   background-position: center bottom;
+  padding-top: 110px;
 
   &__text {
     font-weight: 900;
