--- a/src/precss/styles.scss
+++ b/src/precss/styles.scss
@@ -22,3 +22,6 @@
 @import "blocks/advantages";
 @import "blocks/slogan";
 @import "blocks/scheme";
+@import "blocks/pf-slider";
+@import "blocks/portfolio";
+@import "blocks/workers";
