--- a/src/precss/blocks/_btn.scss
+++ b/src/precss/blocks/_btn.scss
@@ -1,16 +1,13 @@
 .btn {
-  padding: 23px;
-
+  padding: 15px 30px;
   text-align: center;
   text-decoration: none;
   text-transform: uppercase;
-
-  color: #fff;
+  color: #ffffff;
   border: 0;
   border-radius: 3px;
-  background-color:  #ff9300;
+  background-color: #ff9300;
   box-shadow: inset 0 -2px 0 rgba(0, 0, 0, .2);
-
   font-size: 14px;
   font-weight: bold;
   line-height: 1;
