--- a/src/precss/blocks/_services.scss
+++ b/src/precss/blocks/_services.scss
@@ -1,5 +1,6 @@
 .services {
   padding-top: 50px;
+  padding-bottom: 100px;
   &__wrap {
     display: flex;
     justify-content: center;
@@ -11,5 +12,10 @@
     color: #35353d;
     text-align: center;
     margin-bottom: 40px;
+  }
+
+  &__wrap {
+    @include row-flex();
+    margin-top: 60px;
   }
 }
