--- a/src/precss/blocks/_header-top.scss
+++ b/src/precss/blocks/_header-top.scss
@@ -84,6 +84,7 @@
     line-height: 1;
     border-radius: 3px;
     margin-top: 12px;
+    cursor: pointer;
 
     &:first-of-type {
       margin-right: 10px;
