--- a/src/precss/blocks/_feed-back.scss
+++ b/src/precss/blocks/_feed-back.scss
@@ -3,6 +3,44 @@
   border: 1px  solid white;
   padding: 50px 65px;
 
+  &--popup {
+    background: white;
+    width: 455px;
+    margin: 0 auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+  &__close {
+    position: absolute;
+    top: 11px;
+    right: 11px;
+    border-radius: 50%;
+    background-color: $c-blue;
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
+
+    &::before,
+    &::after {
+      content: "";
+      position: absolute;
+      height: 3px;
+      width: 25px;
+      background-color: white;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%) rotate(-45deg);
+      border-radius: 1px;
+    }
+
+    &::after {
+      transform: translate(-50%, -50%) rotate(45deg);
+    }
+  }
+
   &__headline {
     font-size: 32px;
     font-family: "Open Sans";
@@ -13,9 +51,28 @@
     line-height: 1;
 
     span {
-      text-transform: none;
       line-height: 1;
+      font-size: 22px;
+      display: block;
     }
+  }
+
+  &__choise-wrap {
+    margin-bottom: 25px;
+  }
+
+  &__choise {
+    font-size: 18px;
+    font-weight: bold;
+    margin-bottom: 5px;
+  }
+
+  &__label {
+    font-size: 14px;
+    margin-left: 4px;
+    cursor: pointer;
+    line-height: 1.5;
+    margin-right: 20px;
   }
 
   &__input {
@@ -27,6 +84,10 @@
     border: 0;
     border-radius: 3px;
     margin-bottom: 10px;
+
+    &--border {
+      border: 1px solid #cccccc;
+    }
   }
 
   &__btn {
