--- a/src/precss/blocks/_header-top.scss
+++ b/src/precss/blocks/_header-top.scss
@@ -27,6 +27,10 @@
     align-self: flex-start;
   }
 
+  &__btns {
+    display: flex;
+  }
+
   &__works {
     padding-left: 20px;
     position: relative;
