--- a/src/precss/blocks/_pf-slider.scss
+++ b/src/precss/blocks/_pf-slider.scss
@@ -3,7 +3,7 @@
   margin-top: 25px;
 
   &__item {
-    display: flex;
+    display: flex !important;
     position: relative;
     background: white;
     border: 10px solid white;
@@ -59,5 +59,35 @@
       box-shadow: inset 0 -2px 0 #ff6c00;
       cursor: default;
     }
+  }
+}
+
+
+.slick-dots {
+  display: flex !important;
+  justify-content: center;
+  align-items: center;
+  margin-top: 18px;
+
+  button {
+    border-radius: 50%;
+    width: 15px;
+    height: 15px;
+    border: 3px solid #ff9300;
+    margin: 0 7.5px;
+    cursor: pointer;
+    font-size: 0;
+    padding: 0;
+  }
+}
+
+.slick-active {
+  button {
+    height: 21px;
+    width: 21px;
+    background-image: linear-gradient(to top, #ff9300 66%, #ffb517);
+    border: 0;
+    box-shadow: inset 0 -2px 0 #ff6c00;
+    cursor: default;
   }
 }
