--- a/src/precss/blocks/_timer.scss
+++ b/src/precss/blocks/_timer.scss
@@ -4,16 +4,26 @@
   &__counter {
     display: flex;
     flex-direction: column;
-
-    width: 100px;
-    height: 100px;
+    width: 115px;
+    height: 115px;
     margin: 1em;
-
-    border: 2px solid blue;
     border-radius: 50%;
-
     justify-content: center;
     align-content: center;
     align-items: center;
+    box-shadow: 0 0 5px white, inset 0 0 5px white;
+    border: 4px solid white;
+  }
+
+  &__num {
+    font-size: 40px;
+    font-weight: bold;
+    line-height: 35px;
+    color: #35353d;
+  }
+
+  &__units {
+    color: #35353d;
+    font-size: 14px;
   }
 }
