--- a/src/precss/blocks/_timer.scss
+++ b/src/precss/blocks/_timer.scss
@@ -6,7 +6,6 @@
     flex-direction: column;
     width: 115px;
     height: 115px;
-    margin: 1em;
     border-radius: 50%;
     justify-content: center;
     align-content: center;
@@ -25,5 +24,16 @@
   &__units {
     color: #35353d;
     font-size: 14px;
+  }
+
+  &__wrap {
+    position: relative;
+    margin: 1em;
+  }
+
+  &__canvas {
+    position: absolute;
+    width: 100%;
+    height: 100%;
   }
 }
