--- a/src/precss/blocks/_container.scss
+++ b/src/precss/blocks/_container.scss
@@ -1,4 +1,17 @@
 .container {
   @include wrapper();
-  width: 1170px !important;
+  width: 1170px;
+
+  @include lg-block() {
+    width: 970px;
+  };
+  @include md-block() {
+    width: 750px;
+  };
+  @include sm-block() {
+    width: 480px;
+  };
+  @include xs-block() {
+    width: 320px;
+  };
 }
