--- a/src/precss/blocks/_search.scss
+++ b/src/precss/blocks/_search.scss
@@ -2,6 +2,10 @@
   position: relative;
   width: 300px;
 
+  @include lg-block() {
+    width: 212px;
+  }
+
   &__input {
     line-height: 1;
     width: 100%;
