--- a/src/precss/blocks/_header-top.scss
+++ b/src/precss/blocks/_header-top.scss
@@ -6,11 +6,16 @@
 
   &__wrap {
     display: flex;
+    justify-content: space-between;
   }
   &__logo {
     text-align: center;
     color: $c-blue;
-    margin-right: 70px;
+    margin-right: 66px;
+
+    @include lg-block() {
+      margin-right: 30px;
+    }
   }
   &__company {
     &-name {
@@ -84,11 +89,16 @@
     text-align: center;
     background-color: white;
     border: 1px solid;
-    padding: 10px 35px;
+    padding: 10px;
+    width: 300px;
     line-height: 1;
     border-radius: 3px;
     margin-top: 12px;
     cursor: pointer;
+
+    @include lg-block() {
+      width: 260px;
+    }
 
     &:first-of-type {
       margin-right: 10px;
