--- a/src/precss/blocks/_page-footer.scss
+++ b/src/precss/blocks/_page-footer.scss
@@ -11,12 +11,11 @@
     @include col();
     @include size(4);
     display: flex;
-    flex-direction: column;
-    height: 160px;
     flex-wrap: wrap;
+    justify-content: space-between;
 
     &-link {
-      @include size(6);
+      width: 49%;
       margin-bottom: 20px;
       text-decoration: none;
       color: $c-blue;
@@ -62,6 +61,7 @@
     text-align: center;
     border: 1px solid #9a9a9e;
     text-decoration: none;
+    font-size: 14px;
   }
   &__copyright {
     font-size: 13px;
