--- a/src/precss/blocks/_page-header.scss
+++ b/src/precss/blocks/_page-header.scss
@@ -25,11 +25,20 @@
     font-weight: 900;
     margin-bottom: 45px;
 
+    @include lg-block() {
+      font-size: 60px;
+    }
+
     span {
       color: #35353d;
       font-size: 30px;
       display: block;
       font-weight: bold;
+
+
+      @include lg-block() {
+        font-size: 26px;
+      }
     }
   }
 }
