--- a/src/precss/blocks/_pf-slider.scss
+++ b/src/precss/blocks/_pf-slider.scss
@@ -6,20 +6,33 @@
     display: flex !important;
     position: relative;
     background: white;
-    border: 10px solid white;
+    padding: 10px;
+    margin: 0 20px;
   }
 
   &__img {
     width: 60%;
+    overflow: hidden;
+    background-size: cover;
+    background-position: center;
 
     @include size(8);
+
+    img {
+      min-height: 100%;
+      min-width: 100%;
+    }
   }
   &__descr {
-    @include size(4);
+    width: 360px;
     margin-left: auto;
     padding-top: 70px;
     padding-bottom: 150px;
-    padding-right: 30px;
+    padding-right: 15px;
+
+    @include lg-block() {
+      width: 293px;
+    }
   }
   &__arrow {
     position: absolute;
@@ -33,7 +46,10 @@
 
   &__text {
     font-size: 16px;
-    line-height: 24px;
+    line-height: 1.5;
+    @include lg-block() {
+      font-size: 14px;
+    }
   }
 
   &__controls {
@@ -41,6 +57,11 @@
     justify-content: center;
     align-items: center;
     margin-top: 18px;
+
+    li {
+      display: flex;
+      align-items: center;
+    }
   }
 
   &__dot {
@@ -78,6 +99,7 @@
     cursor: pointer;
     font-size: 0;
     padding: 0;
+    transition: width 0s ease;
 
     &:hover {
       border-color: #2293d7;
