--- a/src/precss/blocks/_slogan.scss
+++ b/src/precss/blocks/_slogan.scss
@@ -11,9 +11,17 @@
     text-transform: uppercase;
     text-align: right;
 
+    @include lg-block() {
+      font-size: 70px;
+    }
+
     span {
       display: block;
       font-size: 60px;
+
+      @include lg-block() {
+        font-size: 50px;
+      }
     }
   }
 }
