--- a/src/precss/blocks/_service.scss
+++ b/src/precss/blocks/_service.scss
@@ -38,6 +38,10 @@
     background-size: cover;
     background-position: center;
 
+    &--two {
+      margin-left: 75px;
+    }
+
     &--small {
       position: absolute;
       width: 170px;
