--- a/src/precss/blocks/_slogan.scss
+++ b/src/precss/blocks/_slogan.scss
@@ -14,6 +14,9 @@
     @include lg-block() {
       font-size: 70px;
     }
+    @include md-block() {
+      font-size: 54px;
+    }
 
     span {
       display: block;
@@ -21,6 +24,9 @@
 
       @include lg-block() {
         font-size: 50px;
+      }
+      @include md-block() {
+        font-size: 40px;
       }
     }
   }
