--- a/src/precss/styles.scss
+++ b/src/precss/styles.scss
@@ -27,6 +27,6 @@
 @import "blocks/workers";
 @import "blocks/overlay";
 
-* {
-  transition: width 1s ease-in-out;
-}
+// * {
+//   transition: width 1s ease-in-out;
+// }
