--- a/src/precss/blocks/_arrow.scss
+++ b/src/precss/blocks/_arrow.scss
@@ -26,6 +26,12 @@
       @include size(7);
     }
 
+    @include md-block() {
+      font-size: 16px;
+    }
+
+
+
     &::after {
       border-width: 42px;
       border-right-width: 0;
