--- a/src/precss/blocks/_header-top.scss
+++ b/src/precss/blocks/_header-top.scss
@@ -30,6 +30,10 @@
   &__right {
     display: flex;
     align-self: flex-start;
+
+    @include md-block() {
+      flex-direction: column;
+    }
   }
 
   &__btns {
@@ -43,6 +47,10 @@
     color: #35353d;
     line-height: 18px;
     margin-bottom: 25px;
+
+    @include md-block() {
+      width: 187px;
+    }
 
     &::before {
       content: "";
@@ -59,6 +67,12 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+
+    @include md-block() {
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: flex-start;
+    }
   }
 
 
