--- a/src/precss/blocks/_page-header.scss
+++ b/src/precss/blocks/_page-header.scss
@@ -29,6 +29,10 @@
       font-size: 60px;
     }
 
+    @include md-block() {
+      font-size: 48px;
+    }
+
     span {
       color: #35353d;
       font-size: 30px;
@@ -38,6 +42,10 @@
 
       @include lg-block() {
         font-size: 26px;
+      }
+
+      @include md-block() {
+        font-size: 22px;
       }
     }
   }
