--- a/src/precss/blocks/_pf-slider.scss
+++ b/src/precss/blocks/_pf-slider.scss
@@ -8,6 +8,10 @@
     background: white;
     padding: 10px;
     margin: 0 20px;
+
+    @include md-block() {
+      flex-direction: column;
+    }
   }
 
   &__img {
@@ -17,9 +21,14 @@
     background-position: center;
 
     @include size(8);
+    @include md-block() {
+      width: 100%;
+      height: 470px;
+    }
 
     img {
-      min-height: 100%;
+      flex-grow: 1;
+      margin-right: 30px;
       min-width: 100%;
     }
   }
@@ -33,9 +42,17 @@
     @include lg-block() {
       width: 293px;
     }
+    @include md-block() {
+      width: 100%;
+      padding-bottom: 0;
+    }
   }
   &__arrow {
     position: absolute;
+    @include md-block() {
+      top: 370px;
+      bottom: 0;
+    }
   }
 
   &__name {
