--- a/src/precss/blocks/_tabs.scss
+++ b/src/precss/blocks/_tabs.scss
@@ -2,6 +2,8 @@
   &__headers {
     display: flex;
     justify-content: center;
+    border-radius: 3px;
+    border: 2px solid #00a4e6;
   }
 
   &__header {
@@ -13,8 +15,6 @@
     line-height: 1;
     text-align: center;
     padding: 20px;
-    border: 2px solid #00a4e6;
-    border-radius: 0 3px 3px 0;
     width: 390px;
     text-decoration-line: underline;
     text-decoration-style: dotted;
@@ -33,7 +33,6 @@
   }
   &__header.slick-current {
     background-color: #00a4e6;
-    border-radius: 3px 0 0 3px;
     color: white;
     text-decoration: none;
     cursor: default;
