--- a/src/precss/blocks/_timer.scss
+++ b/src/precss/blocks/_timer.scss
@@ -36,6 +36,11 @@
     position: relative;
     @include col();
     @include size(3);
+
+    @include md-block() {
+      width: 92px;
+      height: 92px;
+    }
   }
 
   &__canvas {
