--- a/src/precss/blocks/_header-top.scss
+++ b/src/precss/blocks/_header-top.scss
@@ -38,6 +38,9 @@
 
   &__btns {
     display: flex;
+    @include sm-block() {
+      flex-direction: column;
+    }
   }
 
   &__works {
@@ -72,6 +75,9 @@
       flex-direction: row;
       justify-content: space-between;
       align-items: flex-start;
+    }
+    @include sm-block() {
+      flex-direction: column;
     }
   }
 
@@ -112,6 +118,10 @@
 
     @include lg-block() {
       width: 260px;
+    }
+
+    @include sm-block() {
+      width: 100%;
     }
 
     &:first-of-type {
