--- a/src/precss/blocks/_tabs.scss
+++ b/src/precss/blocks/_tabs.scss
@@ -4,6 +4,10 @@
     justify-content: center;
     border-radius: 3px;
     border: 2px solid #00a4e6;
+    height: 53px;
+    width: 780px;
+    margin: 0 auto;
+    box-sizing: border-box;
   }
 
   &__header {
@@ -12,17 +16,26 @@
     color: rgb(5, 125, 169);
     font-weight: bold;
     text-transform: uppercase;
-    line-height: 1;
+    height: 53px;
+    line-height: 53px;
     text-align: center;
-    padding: 20px;
+    //padding: 20px;
     width: 390px;
-    text-decoration-line: underline;
-    text-decoration-style: dotted;
     cursor: pointer;
 
+    span {
+      display: inline-block;
+      border-bottom: 2px dotted #00a4e6;
+      line-height: normal;
+      vertical-align: middle;
+    }
+
     &:hover {
-      color: black;
+      color: #000;
       text-decoration: none;
+      span {
+        border-color: transparent;
+      }
     }
 
     &--active {
