--- a/src/precss/blocks/_action.scss
+++ b/src/precss/blocks/_action.scss
@@ -9,6 +9,10 @@
   margin-bottom: 80px;
   z-index: 1;
 
+  &_bottom {
+    margin-bottom: -20px;
+  }
+
   &__wrap {
     @include row-flex();
     padding: 100px 0;
