--- a/src/precss/styles.scss
+++ b/src/precss/styles.scss
@@ -26,6 +26,7 @@
 @import "blocks/portfolio";
 @import "blocks/workers";
 @import "blocks/overlay";
+@import "blocks/jq-checkbox";
 
 // * {
 //   transition: width 1s ease-in-out;
