--- a/src/precss/blocks/_advantages.scss
+++ b/src/precss/blocks/_advantages.scss
@@ -1,11 +1,13 @@
 .advantages {
   padding-top: 80px;
+
   &__wrap {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     margin-top: 50px;
-    padding-bottom: 120px;
+    padding: 0 67px 120px 67px;
   }
+
   &__item {
     padding-top: 220px;
     width: 235px;
