--- a/src/precss/blocks/_gifts.scss
+++ b/src/precss/blocks/_gifts.scss
@@ -15,15 +15,13 @@
     content: "";
     position: absolute;
     background-image: url("../img/gifts-left.png");
-    background-position: center;
     height: 100%;
     max-width: 440px;
-    height: 100%;
     top: 0;
-    left: 0;
+    left: -80px;
     background-repeat: no-repeat;
     // background-size: cover;
-    background-position: right;
+    background-position: left;
     right: calc(50% + 350px);
     @include md-block() {
       background-size: 344px;
@@ -34,11 +32,11 @@
     content: "";
     position: absolute;
     background-image: url("../img/gifts-rigth.png");
-    background-position: left;
+    background-position: right;
     height: 100%;
     width: 527px;
     top: 0;
-    right: 0;
+    right: -165px;
     background-repeat: no-repeat;
     background-size: cover;
     @include md-block() {
@@ -48,6 +46,31 @@
       background-repeat: no-repeat;
       background-size: 527px;
       left: calc(50% + 260px);
+    }
+  }
+}
+
+@media screen and (max-width: 1600px) {
+  .gifts {
+    overflow: hidden;
+
+    &:before {
+      left: -200px;
+    }
+    &:after {
+      right: -300px;
+    }
+  }
+}
+@media screen and (max-width: 1350px) and (min-width: 1170px) {
+  .gifts {
+    overflow: hidden;
+
+    &:before {
+      left: -270px;
+    }
+    &:after {
+      right: -350px;
     }
   }
 }
